# llama_from_scratch

./: .gitignore  README.md  pyproject.toml
llama_from_scratch/: inference.py  model.py
notebooks/: polar_coords.ipynb
